fix(tsx): improve light mode color contrasts

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 $pink: #de5a7f;
 $teal: #00857c;
-$blue: #008299;
+$blue: #006274;
 $red: #fd3300;
 
 $lightBg: #ffffff;
